edit: visited pseudo class links; linkbtn

--- a/achieve.html
+++ b/achieve.html
@@ -20,14 +20,14 @@
             <div class="container intro">
                 <h1 class="topper display-4">I AM ... A STUDENT LEADER</h1>
                 <blockquote class="blockquote quotes">
-                    <p class="mb-0">"text text text"</p>
-                    <footer class="blockquote-footer footer"><em>JK</em></footer>
+                    <p class="mb-0">"A leader is one who knows the way, goes the way, and shows the way"</p>
+                    <footer class="blockquote-footer footer"><em>John C. Maxwell</em></footer>
                 </blockquote>
             </div>
         </div>
         <nav class="container-fluid navbar">
             <div class="centra">
-                <h5>Accomplishments &amp; Achievements</h5>
+                <h5 id="achieve">Accomplishments &amp; Achievements</h5>
             </div>
         </nav>
         <div class="container-fluid main">
@@ -73,35 +73,35 @@
         </div>
          <div class="container-fluid domain">
             <div class="row">
-                <div class="col" title="A MATHEMATICIAN">
-                    <a href="cognitive.html#math">
-                        <img class="icon" src="images/icons/math.png" alt="A Mathematician">
-                    </a><br>MATHEMATICIAN
-                </div>
                 <div class="col" title="A SPARTAN">
                     <a href="physical.html">
-                        <img class="icon" src="images/icons/spartan.png" alt="A Spartan">
-                    </a><br>SPARTAN
+                        <img class="icon" src="images/icons/spartan.png" alt="A Spartan"><br>SPARTAN
+                    </a>
                 </div>
                 <div class="col" title="A LOGICIAN">
                     <a href="cognitive.html">
-                        <img class="icon" src="images/icons/logician.png" alt="A Logician">
-                    </a><br>LOGICIAN
+                        <img class="icon" src="images/icons/logician.png" alt="A Logician"><br>LOGICIAN
+                    </a>
                 </div>
                 <div class="col" title="A VIOLINIST">
                     <a href="aesthetic.html">
-                        <img class="icon" src="images/icons/violin.png" alt="A Musician">
-                    </a><br>VIOLINIST
+                        <img class="icon" src="images/icons/violin.png" alt="A Musician"><br>VIOLINIST
+                    </a>
                 </div>
                 <div class="col" title="A CODER">
                     <a href="cognitive.html#scratch">
-                        <img class="icon" src="images/icons/code.png" alt="A Coder">
-                    </a><br>CODER
+                        <img class="icon" src="images/icons/code.png" alt="A Coder"><br>CODER
+                    </a>
                 </div>
                 <div class="col" title="A GAMER">
                     <a href="cognitive.html#chess">
-                        <img class="icon" src="images/icons/gamer.png" alt="A Gamer">
-                    </a><br>GAMER
+                        <img class="icon" src="images/icons/gamer.png" alt="A Gamer"><br>GAMER
+                    </a>
+                </div>
+                <div class="col" title="A MATHEMATICIAN">
+                    <a href="cognitive.html#math">
+                        <img class="icon" src="images/icons/math.png" alt="A Mathematician"><br>MATHEMATICIAN
+                    </a>
                 </div>
             </div>
         </div>
