--- a/aesthetic.html
+++ b/aesthetic.html
@@ -72,23 +72,23 @@
             <div class="row">
                 <div class="col">
                     <a href="index.html">
-                        <img class="icon" src="images/jklogo.png" alt="I am JK">
-                    </a><br>WHO AM I?
+                        <img class="icon" src="images/jklogo.png" alt="I am JK"><br>WHO AM I?
+                    </a>
                 </div>
                 <div class="col">
                     <a href="cognitive.html">
-                        <img class="icon" src="images/icons/logician.png" alt="Logician">
-                    </a><br>my forte
+                        <img class="icon" src="images/icons/logician.png" alt="Logician"><br>my forte
+                    </a>
                 </div>
                 <div class="col">
                     <a href="physical.html">
-                        <img class="icon" src="images/icons/spartan.png" alt="Spartan">
-                    </a><br>my sport
+                        <img class="icon" src="images/icons/spartan.png" alt="Spartan"><br>my sport
+                    </a>
                 </div>
                 <div class="col">
                     <a href="achieve.html">
-                        <img class="icon" src="images/icons/achieve.png" alt="A Leader">
-                    </a><br>achievements
+                        <img class="icon" src="images/icons/achieve.png" alt="A Leader"><br>achievements
+                    </a>
                 </div>
             </div>
         </div>
