--- a/cognitive.html
+++ b/cognitive.html
@@ -31,18 +31,18 @@
             <div class="row">
                 <div class="col" title="A MATHEMATICIAN">
                     <a href="#math">
-                        <img class="icon" src="images/icons/math.png" alt="A Mathematician">
-                    </a><br>Mathematician
+                        <img class="icon" src="images/icons/math.png" alt="A Mathematician"><br>Mathematician
+                    </a>
                 </div>
                 <div class="col" title="A CODER">
                     <a href="#coding">
-                        <img class="icon" src="images/icons/code.png" alt="A Coder">
-                    </a><br>Coder
+                        <img class="icon" src="images/icons/code.png" alt="A Coder"><br>Coder
+                    </a>
                 </div>
                 <div class="col" title="A GAMER">
                     <a href="#chess">
-                        <img class="icon" src="images/icons/gamer.png" alt="A Gamer">
-                    </a><br>Gamer
+                        <img class="icon" src="images/icons/gamer.png" alt="A Gamer"><br>Gamer
+                    </a>
                 </div>
             </div>
         </div>
@@ -79,7 +79,7 @@
                     <div class="col">    
                         <h5 id="scratch">Robotics &amp; Coding</h5>
                     </div>
-                    <div class="col">
+                    <div class="linkbtn">
                         <a class="btn btn-light" href="https://scratch.mit.edu/users/tech6jamie/" target="_blank">
                             <img class="icon" src="images/icons/scratchlogo.jpg" alt="MIT Scratch"><br>Projects
                         </a>
@@ -131,23 +131,23 @@
             <div class="row">
                 <div class="col">
                     <a href="index.html">
-                        <img class="icon" src="images/jklogo.png" alt="I am JK">
-                    </a><br>WHO AM I?
-                </div>
-                <div class="col">
-                    <a href="aesthetic.html">
-                        <img class="icon" src="images/icons/violin.png" alt="Violinist">
-                    </a><br>my niche
+                        <img class="icon" src="images/jklogo.png" alt="I am JK"><br>WHO AM I?
+                    </a>
                 </div>
                 <div class="col">
                     <a href="physical.html">
-                        <img class="icon" src="images/icons/spartan.png" alt="Spartan">
-                    </a><br>my sport
+                        <img class="icon" src="images/icons/spartan.png" alt="Spartan"><br>my sport
+                    </a>
+                </div>
+                <div class="col">
+                    <a href="aesthetic.html">
+                        <img class="icon" src="images/icons/violin.png" alt="Violinist"><br>my niche
+                    </a>
                 </div>
                 <div class="col">
                     <a href="achieve.html">
-                        <img class="icon" src="images/icons/achieve.png" alt="A Leader">
-                    </a><br>achievements
+                        <img class="icon" src="images/icons/achieve.png" alt="A Leader"><br>achievements
+                    </a>
                 </div>
             </div>
         </div>
