--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
             <div class="row">
                 <div class="col" title="A SPARTAN">
                     <a href="physical.html">
-                        <img class="icon" src="images/icons/spartan.png" alt="A Spartan">
-                    </a><br>my sport
+                        <img class="icon" src="images/icons/spartan.png" alt="A Spartan"><br>my sport
+                    </a>
                 </div>
                 <div class="col" title="A LOGICIAN">
                     <a href="cognitive.html">
-                        <img class="icon" src="images/icons/logician.png" alt="A Logician">
-                    </a><br>my forte
+                        <img class="icon" src="images/icons/logician.png" alt="A Logician"><br>my forte
+                    </a>
                 </div>
                 <div class="col" title="A MUSICIAN">
                     <a href="aesthetic.html">
-                        <img class="icon" src="images/icons/violin.png" alt="A Musician">
-                    </a><br>my niche
+                        <img class="icon" src="images/icons/violin.png" alt="A Musician"><br>my niche
+                    </a>
                 </div>
                 <div class="col" title="A LEADER">
                     <a href="achieve.html">
-                        <img class="icon" src="images/icons/achieve.png" alt="A Leader">
-                    </a><br>achievements
+                        <img class="icon" src="images/icons/achieve.png" alt="A Leader"><br>achievements
+                    </a>
                 </div>
             </div>
         </div>
