--- a/physical.html
+++ b/physical.html
@@ -76,7 +76,7 @@
                     <div class="col">
                         <h5 id="strava">My Journey</h5>
                     </div>
-                    <div class="col">
+                    <div class="linkbtn">
                         <a class="btn btn-light" href="https://www.strava.com/athletes/51155064" target="_blank">
                             <img class="icon" src="images/icons/stravalogo.jpg" alt="strava">Workouts
                         </a>
@@ -98,23 +98,23 @@
             <div class="row">
                 <div class="col">
                     <a href="index.html">
-                        <img class="icon" src="images/jklogo.png" alt="I am JK">
-                    </a><br>WHO AM I?
+                        <img class="icon" src="images/jklogo.png" alt="I am JK"><br>WHO AM I?
+                    </a>
                 </div>
                 <div class="col">
                     <a href="cognitive.html">
-                        <img class="icon" src="images/icons/logician.png" alt="Logician">
-                    </a><br>my forte
+                        <img class="icon" src="images/icons/logician.png" alt="Logician"><br>my forte
+                    </a>
                 </div>
                 <div class="col">
                     <a href="aesthetic.html">
-                        <img class="icon" src="images/icons/violin.png" alt="Violinist">
-                    </a><br>my niche
+                        <img class="icon" src="images/icons/violin.png" alt="Violinist"><br>my niche
+                    </a>
                 </div>
                 <div class="col">
                     <a href="achieve.html">
-                        <img class="icon" src="images/icons/achieve.png" alt="A Leader">
-                    </a><br>achievements
+                        <img class="icon" src="images/icons/achieve.png" alt="A Leader"><br>achievements
+                    </a>
                 </div>
             </div>
         </div>
