fixed mouseover pop-up text

--- a/aesthetic.html
+++ b/aesthetic.html
@@ -71,21 +71,21 @@
         <div class="container-fluid domain">
             <div class="row">
                 <div class="col">
-                    <a href="index.html">
+                    <a href="index.html" title="I am JK">
                         <img class="icon" src="images/jklogo.png" alt="I am JK"><br>WHO AM I?
                     </a>
                 </div>
-                <div class="col">
+                <div class="col" title="A Logician">
                     <a href="cognitive.html">
                         <img class="icon" src="images/icons/logician.png" alt="Logician"><br>my forte
                     </a>
                 </div>
-                <div class="col">
+                <div class="col" title="A Spartan">
                     <a href="physical.html">
                         <img class="icon" src="images/icons/spartan.png" alt="Spartan"><br>my sport
                     </a>
                 </div>
-                <div class="col">
+                <div class="col" title="A Student Leader">
                     <a href="achieve.html">
                         <img class="icon" src="images/icons/achieve.png" alt="A Leader"><br>achievements
                     </a>
