--- a/cognitive.html
+++ b/cognitive.html
@@ -29,17 +29,17 @@
         </div>
         <div class="container-fluid domain">
             <div class="row">
-                <div class="col" title="A MATHEMATICIAN">
+                <div class="col" title="I am a Mathematician">
                     <a href="#math">
                         <img class="icon" src="images/icons/math.png" alt="A Mathematician"><br>Mathematician
                     </a>
                 </div>
-                <div class="col" title="A CODER">
+                <div class="col" title="I am a Coder">
                     <a href="#coding">
                         <img class="icon" src="images/icons/code.png" alt="A Coder"><br>Coder
                     </a>
                 </div>
-                <div class="col" title="A GAMER">
+                <div class="col" title="I am a Gamer">
                     <a href="#chess">
                         <img class="icon" src="images/icons/gamer.png" alt="A Gamer"><br>Gamer
                     </a>
@@ -57,7 +57,7 @@
                         <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/tinker2.jpg" alt="Hardware">
                     </div>
                      <div class="col">
-                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/tinker3.jpg" alt="Hardware">
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/tinker3.jpg" alt="Electronics">
                     </div>
                 </div>
             </div>
@@ -79,7 +79,7 @@
                     <div class="col">    
                         <h5 id="scratch">Robotics &amp; Coding</h5>
                     </div>
-                    <div class="linkbtn">
+                    <div class="linkbtn" title="Click Here for my Scratch Projects">
                         <a class="btn btn-light" href="https://scratch.mit.edu/users/tech6jamie/" target="_blank">
                             <img class="icon" src="images/icons/scratchlogo.jpg" alt="MIT Scratch"><br>Projects
                         </a>
@@ -129,22 +129,22 @@
         </div>
         <div class="container-fluid domain">
             <div class="row">
-                <div class="col">
+                <div class="col" title="I am JK">
                     <a href="index.html">
                         <img class="icon" src="images/jklogo.png" alt="I am JK"><br>WHO AM I?
                     </a>
                 </div>
-                <div class="col">
+                <div class="col" title="A Spartan">
                     <a href="physical.html">
                         <img class="icon" src="images/icons/spartan.png" alt="Spartan"><br>my sport
                     </a>
                 </div>
-                <div class="col">
+                <div class="col" title="A Violinist">
                     <a href="aesthetic.html">
                         <img class="icon" src="images/icons/violin.png" alt="Violinist"><br>my niche
                     </a>
                 </div>
-                <div class="col">
+                <div class="col" title="A Student Leader">
                     <a href="achieve.html">
                         <img class="icon" src="images/icons/achieve.png" alt="A Leader"><br>achievements
                     </a>
