--- a/physical.html
+++ b/physical.html
@@ -76,7 +76,7 @@
                     <div class="col">
                         <h5 id="strava">My Journey</h5>
                     </div>
-                    <div class="linkbtn">
+                    <div class="linkbtn" title="Follow me on Strava">
                         <a class="btn btn-light" href="https://www.strava.com/athletes/51155064" target="_blank">
                             <img class="icon" src="images/icons/stravalogo.jpg" alt="strava">Workouts
                         </a>
@@ -96,22 +96,22 @@
         </div>
         <div class="container-fluid domain">
             <div class="row">
-                <div class="col">
+                <div class="col" title="I am JK">
                     <a href="index.html">
                         <img class="icon" src="images/jklogo.png" alt="I am JK"><br>WHO AM I?
                     </a>
                 </div>
-                <div class="col">
+                <div class="col" title="A Logician">
                     <a href="cognitive.html">
                         <img class="icon" src="images/icons/logician.png" alt="Logician"><br>my forte
                     </a>
                 </div>
-                <div class="col">
+                <div class="col" title="A Violinist">
                     <a href="aesthetic.html">
                         <img class="icon" src="images/icons/violin.png" alt="Violinist"><br>my niche
                     </a>
                 </div>
-                <div class="col">
+                <div class="col" title="A Student Leader">
                     <a href="achieve.html">
                         <img class="icon" src="images/icons/achieve.png" alt="A Leader"><br>achievements
                     </a>
